--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AI_API_KEY = 
-AI_BASE_URL = 
-AI_MODEL_NAME = 
+AI_API_KEY=sk-jqnbmnmgrraglqgpvwvojnvqwnytrdyorbtqqrtjzhasapmo
+AI_BASE_URL=https://api.siliconflow.cn/v1
+AI_MODEL_NAME=Qwen/Qwen2.5-7B-Instruct
