--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 # AI 配置
-AI_API_KEY=your_api_key_here
-AI_BASE_URL=https://api.openai.com/v1
-AI_MODEL_NAME=gpt-4
+AI_API_KEY=sk-lcgbrytdyklptkkhyqdgchoalevfnuwxoxehopghkienophr
+AI_BASE_URL=https://api.siliconflow.cn/v1
+AI_MODEL_NAME=Qwen/Qwen2-7B-Instruct
 
 # 飞书多维表格配置
 FEISHU_APP_ID=cli_a8088174413b900b
@@ -17,10 +17,11 @@ FEISHU_TABLE_ID=tblZPt93lnlPzIM8
 # - Gmail: smtp.gmail.com:465
 # - 126邮箱: smtp.126.com:465
 
-# Outlook 配置示例
-SMTP_HOST=smtp.office365.com
-SMTP_PORT=587
-SMTP_USER=your_email@outlook.com
-SMTP_PASSWORD=your_outlook_password
-SENDER_EMAIL=your_email@outlook.com
+# QQ邮箱配置
+# 注意: SMTP_PASSWORD 必须是授权码，不是QQ密码
+SMTP_HOST=smtp.qq.com
+SMTP_PORT=465
+SMTP_USER=your_qq_email@qq.com
+SMTP_PASSWORD=your_auth_code_here
+SENDER_EMAIL=your_qq_email@qq.com
 SENDER_NAME=圣诞礼物匹配系统
